--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dazzlesphere/Trekkit.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Dazzlesphere/Trekkit/issues"
+  },
+  "homepage": "https://github.com/Dazzlesphere/Trekkit#readme",
   "dependencies": {
-    "dotenv": "^16.1.0",
+    "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
