--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "serve": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,10 @@
   },
   "homepage": "https://github.com/Dazzlesphere/Trekkit#readme",
   "dependencies": {
-    "dotenv": "^16.1.1",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.2.2",
-    "path": "^0.12.7"
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
