--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
